Add arbitrary categories.